add information in contact

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,3 @@
-/*
-div backgrounds : #f3f6f6
-
-background, navigation bar, footer: #214d4d
-words: #ffffff
-shadow: #353f48
-
-
-promotion strip, cta buttons: #d9cab6
-words: #65300E
-
-
-main colors: #214d4d #65300E #f6991d #3a8276
- */
-
 * {
   margin: 0;
   padding: 0;
@@ -903,6 +888,12 @@ text-decoration: none;
 }
 .contact-2 img {
   width: 90%;
+  padding-left: 10%;
+  padding-top: 60px;
+}
+/* Photo contact */
+.photo-contact {
+  width: 10%;
   padding-left: 10%;
   padding-top: 60px;
 }
